--- a/kustomize/deployment.yaml
+++ b/kustomize/deployment.yaml
@@ -20,6 +20,9 @@ spec:
         workingDir: /app/
         ports:
         - containerPort: 3000
+        resources:
+          limits:
+            cpu: 100m
         volumeMounts:
         - mountPath: /app/
           name: source
